# sccache-explosion

./: Dockerfile  README.md
.github/workflows/: build.yml
test-crate/: Cargo.toml
test-crate/src/: lib.rs  main.rs
